<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_gravity="center"
    android:id="@+id/linearLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number1"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/et_number1"
        android:lines="1"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_editor_absoluteY="19dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number2"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_editor_absoluteY="64dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/et_number2"
        android:lines="1"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_editor_absoluteY="84dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btn_plus"
        android:text="@string/plus"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:cornerRadius="10dp"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="129dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="80dp" />

    <Button
        android:id="@+id/btn_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        app:cornerRadius="10dp"
        tools:layout_conversion_absoluteHeight="56dp"
        tools:layout_editor_absoluteY="177dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="79dp" />

    <Button
        android:id="@+id/btn_multiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiple"
        app:cornerRadius="10dp"
        tools:layout_conversion_absoluteHeight="56dp"
        tools:layout_conversion_absoluteWidth="79dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="177dp" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        app:cornerRadius="10dp"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="232dp" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/tv_result"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btn_reset"
        android:text="@string/reset1"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:cornerRadius="10dp"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="129dp"
        tools:layout_editor_absoluteX="0dp" />


</LinearLayout>